--- a/src/app/mainpage/headertwo/headertwo.component.html
+++ b/src/app/mainpage/headertwo/headertwo.component.html
@@ -14,7 +14,7 @@
         <li  class="active"><a [routerLink]="['/area_de_trabalho/freelance_trabalho']"><i class='bx bx-home'></i>Início</a></li>
         <li><a [routerLink]="['/area_de_trabalho/perfil_usuario']"><i class='bx bx-face'></i>Minha Conta</a></li>
         <li><a [routerLink]="['/area_de_trabalho/vercontrato']"><i class='bx bx-calendar-check'></i>Contratos</a></li>
-        <!-- <li><a href="#"><i class='bx bx-money-withdraw'></i>Finança</a></li> -->
+        <li><a [routerLink]="['/area_de_trabalho/regras']"><i class='bx bx-info-square'></i>Regras</a></li>
         <li><a href="#"><i class='bx bx-cog'></i>Configurações</a></li>
     </ul>
     <ul class="side-menu">
@@ -43,14 +43,14 @@
         <label for="theme-toggle" class="theme-toggle"></label> -->
         
 
-        <a href="#" class="notif">
+        <!-- <a href="#" class="notif">
             <i class='bx bx-message-dots'></i>
            <span class="count">12</span>
-         </a>
+         </a> -->
 
          <a href="#" class="notif">
             <i class='bx bx-bell'></i>
-            <span class="count">12</span>
+            <!-- <span class="count">12</span> -->
         </a>
 
         <a href="#" class="profile">
