--- a/src/app/portal/footer/footer.component.html
+++ b/src/app/portal/footer/footer.component.html
@@ -5,6 +5,7 @@
             <a href="#">Inicio</a>
             <a href="#">Sobre</a>
             <a href="#">Privacy Policy</a>
+            <a [routerLink]="['/portal/login']">Admin</a>
         </div>
         <div class="social">
             <i class='bx bxl-instagram'></i>
