--- a/src/app/mainpage/showcontract/showcontract.component.css
+++ b/src/app/mainpage/showcontract/showcontract.component.css
@@ -43,3 +43,6 @@ width: 100%;
     align-items: center !important;
     margin-left: 160px !important;
 }
+.botao{display: flex;
+align-items: end;
+justify-content: end;}
