--- a/src/app/portal/register/register.component.css
+++ b/src/app/portal/register/register.component.css
@@ -34,6 +34,10 @@
   outline: none;
   border: none;
   }
+  .areaRegister p{
+    font-size: 10px;
+    color: red;
+  }
 
   
  @media screen and (max-width: 1200px){
