this commit fix list publications

--- a/src/app/mainpage/freeoffice/freeoffice.component.html
+++ b/src/app/mainpage/freeoffice/freeoffice.component.html
@@ -14,7 +14,7 @@
             <a href="#" class="profile">
               <img src="../../../assets/img/download (1).png">
           </a>
-          <label for="profile">Ajca-Digital</label>
+          <label for="profile">{{ item.empresa }}</label>
         </div>
             <h5 class="card-header">{{ item.subject }}</h5>
             <div class="card-body">
