--- a/src/app/mainpage/backoffice/backoffice.component.html
+++ b/src/app/mainpage/backoffice/backoffice.component.html
@@ -35,7 +35,7 @@
                         <div class="publicService">
                             <div>
                                 <label for="inputProfi" class="form-label">Profissão</label>
-                                <select [(ngModel)]="profissaoSelecionada" name="profissaoSelecionada"
+                                <select [(ngModel)]="profissaoSelecionada" (change)="GetEspecialidadesByProfissao()" name="profissaoSelecionada"
                                     class="form-select">
                                     <option selected>Selecione</option>
                                     <option *ngFor="let profissao of profissoes" [ngValue]="profissao">{{
