--- a/src/app/mainpage/headertwo/headertwo.component.html
+++ b/src/app/mainpage/headertwo/headertwo.component.html
@@ -48,7 +48,7 @@
            <span class="count">12</span>
          </a> -->
 
-         <a href="#" class="notif">
+         <a  [routerLink]="['/area_de_trabalho/notificacoes']" class="notif">
             <i class='bx bx-bell'></i>
             <!-- <span class="count">12</span> -->
         </a>
