--- a/src/app/mainpage/notificacoes/notificacoes.component.html
+++ b/src/app/mainpage/notificacoes/notificacoes.component.html
@@ -1,1 +1,30 @@
-<p>notificacoes works!</p>
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+</head>
+<app-headertwo></app-headertwo>
+
+
+<body>
+    <div class="content">
+        <main>
+
+
+
+            <div class="container viewAll">
+                <ul>
+                    <li><a>Solicitação de serviço</a>
+                        <a [routerLink]="['/area_de_trabalho/contratocriterios']">queixa</a>
+                    </li>
+                    <hr>
+                  
+                </ul>
+            </div>
+
+
+
+
+
+
+        </main>
+    </div>
+</body>
