this commit fix submissão

--- a/src/app/mainpage/freeoffice/freeoffice.component.html
+++ b/src/app/mainpage/freeoffice/freeoffice.component.html
@@ -21,7 +21,7 @@
               <h5 class="card-title">#</h5>
               <p class="card-text">{{ item.body }}</p>
               <!-- <img src="..." class="card-img-bottom" alt="..."> -->
-              <input type="button" class="btn btn-primary" (click)="submeter()" value="Submeter Portifólio">
+              <input type="button" class="btn btn-primary" (click)="submeter(item)" value="Submeter Portifólio">
               <!-- <a href="#" class="btn btn-primary">Submeter</a> -->
             </div>
           </div>
