--- a/src/app/mainpage/adminwork/adminwork.component.html
+++ b/src/app/mainpage/adminwork/adminwork.component.html
@@ -1,4 +1,5 @@
 <head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">  
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
@@ -7,37 +8,16 @@
 <body>
     <div class="content">
         <main>
-            <head>
-                <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">  
-            </head>
-            <app-headertwo></app-headertwo>
             
-            
-                <body>
-                    <div class="content">
-                    <main>   
-            
-            
-                      <div class="card container">
-                        <div class="company">
-                        <a href="#" class="profile">
-                          <img src="../../../assets/img/download (1).png">
-                      </a>
-                     
-                    </div>
+                      <div class="card container" *ngFor="let item of queixas">
+
                         <div class="card-body">
-                          <h5 class="card-title">#</h5>
-                          <p class="card-text"></p>
+                          <p class="card-text">{{ item.descriptioncomplaint }}</p>
                           <!-- <img src="..." class="card-img-bottom" alt="..."> -->
                           <input type="button" class="btn btn-primary" value="ver contrato">
                           <!-- <a href="#" class="btn btn-primary">Submeter</a> -->
                         </div>
                       </div>
-                    </main>
-                    </div>
-            </body>
-            
-
 
         </main>
     </div>
