--- a/src/app/mainpage/freeoffice/freeoffice.component.css
+++ b/src/app/mainpage/freeoffice/freeoffice.component.css
@@ -205,6 +205,11 @@ margin-top: 30px;
     font-size: 13px;
  }
 
+ .custom-color {
+    background-color: gray; /* Define a cor de fundo do botão quando estiver desabilitado */
+    color: white; /* Define a cor do texto do botão */
+  }
+
 
 @media screen and (max-width: 768px) {
     .sidebar{
