--- a/src/app/mainpage/perfil/perfil.component.css
+++ b/src/app/mainpage/perfil/perfil.component.css
@@ -1045,7 +1045,7 @@ input{
     justify-content: center;
     gap: 20px;
     margin-top: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 80px;
   }
   .arquivos button{
     border: none;
@@ -1059,6 +1059,11 @@ input{
   textarea:focus{
     box-shadow: none;
     border: none;
+  }
+  .image-group{
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 40px;
   }
 
 @media screen and (max-width: 768px) {
