--- a/src/app/mainpage/perfil/perfil.component.html
+++ b/src/app/mainpage/perfil/perfil.component.html
@@ -13,7 +13,7 @@
                 <div class="user">
                     <div class="separatorInfo">
                         <img src="../../../assets/img/download (1).png">
-                        <button class="changePhoto">Trocar foto</button>
+                        <!-- <button class="changePhoto">Trocar foto</button> -->
                         <div class="nameProfission">
                             <h5>{{ nameUser }}</h5>
                             <h6>{{ specialitys }}</h6>
